# ESP32-Vision-Node

./: .gitignore  CMakeLists.txt  README.md
components/app_config/: Kconfig.projbuild
components/app_config/include/: app_config.h
components/connectivity/: CMakeLists.txt  ethernet_service.c  idf_component.yml
components/connectivity/include/: ethernet_service.h
components/detection/: CMakeLists.txt  motion_detection.c
components/detection/include/: motion_detection.h
components/illumination/: CMakeLists.txt  ir_illuminator.c
components/illumination/include/: ir_illuminator.h
components/messaging/: CMakeLists.txt  command_router.c  heartbeat_task.c  idf_component.yml  image_transfer.c  json_utils.c  mqtt_service.c  node_event.c  publish_queue.c  topic_map.c
components/messaging/include/: command_router.h  heartbeat_task.h  image_transfer.h  json_utils.h  mqtt_service.h  node_event.h  publish_queue.h  topic_map.h
components/runtime_config/: CMakeLists.txt  runtime_config.c
components/runtime_config/include/: runtime_config.h
docs/: ethernet-mqtt-architecture.md  ethernet-mqtt.md  ir-illuminator.md  kconfig.md  motion-detection.md  pir-motion-detection.md  runtime-config-nvs.md  runtime-config.md
main/: CMakeLists.txt  app_config.h  command_router.c  ethernet_service.h  heartbeat_task.c  heartbeat_task.h  idf_component.yml  image_transfer.c  image_transfer.h  main.c  node_event.h  publish_queue.c  topic_map.c  topic_map.h
